express/blocks/template-x/template-x.css
/* ... */
main .template-x.sixcols > .template-x-inner-wrapper > .masonry-col,
main .template-x.fullwidth > .template-x-inner-wrapper > .masonry-col {
    max-width: 175px;
}

main .template-x.fullwidth.sm-view > .template-x-inner-wrapper > .masonry-col {
    max-width: 165px;
    text-align: center;
}

main .template-x.fullwidth.md-view > .template-x-inner-wrapper > .masonry-col {
    max-width: 258.5px;
    text-align: center;
}

main .template-x.fullwidth.lg-view > .template-x-inner-wrapper > .masonry-col {
    max-width: 352px;
    text-align: center;
}

main .template-x-wrapper .template-title {
    margin: 0 12px 20px 12px;
}

main .template-x-container .template-x-wrapper:not(:has(.toolbar-wrapper)) {
    padding-top: 60px;
}

main .template-x-container:not(.horizontal) .template-title h2 {
    padding-top: 80px;
}

main .template-x-wrapper .template-title.with-link > div {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    align-items: flex-start;
}

main .template-x-wrapper .template-title.horizontal > div > * {
    text-align: left;
    margin: 0;
}

main .template-x-wrapper .template-title.horizontal p {
    margin-top: 8px;
    width: fit-content;
    font-size: var(--body-font-size-m);
}

main .template-x-wrapper .template-link,
main .template-x-wrapper .template-title-link {
    text-decoration: none;
    padding-left: 16px;
    padding-top: 6px;
    display: flex;
}

main .template-x-wrapper .template-link::after,
main .template-x-wrapper .template-title-link::after {
    display: flex;
    width: 6px;
    height: 6px;
    border-top-width: 0;
    border-left-width: 0;
    border-bottom-width: 2px;
    border-right-width: 2px;
    border-style: solid;
    border-color: var(--color-info-accent);
    transform-origin: 75% 75%;
    transform: rotate( -45deg );
    content: "";
    margin-top: 5px;
    margin-left: 5px;
    margin-right: 2.25px;
}

main .template-x-wrapper .template-title-link {
    padding: 0;
    white-space: nowrap;
}

main .template-x-wrapper .template-title-link::after {
    margin-top: 7px;
}

main .template-x .template p {
    margin: 0;
}

main .template-x .template {
    display: flex;
    flex-direction: column;
    width: 240px;
    margin: 0 0 32px 0;
    justify-content: flex-end;
    -webkit-column-break-inside: avoid;
    page-break-inside: avoid;
    break-inside: avoid;
    text-decoration: unset;
    position: relative;
    border-radius: 7px;
}

main .template-x .template:focus {
    outline: none;
    box-shadow: 0 0 0 2px var(--color-white), 0 0 0 4px var(--color-info-accent);
}


main .template-x .template > div:first-child > a:any-link {
    padding-left: 0;
}

main .template-x .template img, main .template-x .template video {
    border-radius: 12px;
}

main .template-x .template img:not(.icon),
main .template-x .template video {
    width: 100%;
    height: 100%;
    pointer-events: none;
    object-fit: cover;
    display: block;
}

main .template-x .template .media-wrapper img.hidden,
main .template-x .template .media-wrapper video.hidden {
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
}

main .template-x .template .media-wrapper img.unloaded,
main .template-x .template .media-wrapper video.unloaded {
    display: none;
}

main .template-x .template .media-wrapper video {
    clip-path: inset(0 0 3px 0);
}

main .template-x.large .template {
    width: 100%;
    margin: 0;
    border: 0;
}

main .template-x.large .template > div {
    margin: 0;
}

main .template-x.large .template img {
    width: 100%;
}

main .template-x + .button-container > a {
    margin: 0;
}

main .template-x .template:not(.placeholder) .icon-free-badge {
    height: 24px;
    display: flex;
    border-radius: 1000px;
    align-items: center;
    font-weight: 500;
    width: max-content;
    top: 8px;
    right: 8px;
    color: var(--color-white);
    font-size: 12px;
    line-height: 16px;
    padding: 0 12px;
    background: #000000B3;
}

/* horizontal template-x */
main .template-x-horizontal > div,
main .template-x-horizontal-fullwidth-collaboration-container > div {
    max-width: none;
    padding: 0;
}

main .template-x.horizontal {
    display: block;
    margin-left: auto;
    margin-right: auto;
    min-height: 220px;
}

main .template-x.horizontal.fullwidth {
    max-width: none;
    padding-right: 16px;
    display: block;
    margin-left: auto;
}

main .template-x.horizontal.fullwidth.mini {
    padding: unset;
}

main .template-x.horizontal .template {
    min-height: 200px;
    width: max-content;
    margin-left: 12px;
    margin-right: 12px;
    margin-bottom: 0;
}

main .template-x.horizontal .template img,
main .template-x.horizontal .template video {
    height: 200px;
    width: auto;
}

main .template-x-wrapper .template-title.horizontal h4 {
    font-size: 22px;
    line-height: 26px;
}

main .template-x-wrapper .template-title.horizontal .template:not(.placeholder) .template-link {
    display: none;
}

main .template-x.horizontal.mini .template {
    min-height: unset;
    max-height: 100px;
    max-width: 200px;
    margin: 0 4px;
}

main .template-x.horizontal.mini .template.placeholder {
    height: 100px;
    width: 60px;
    margin: 0 4px 0 12px;
}

main .template-x.horizontal.mini .template.placeholder > div:first-of-type {
    height: unset;
    width: unset;
    display: block;
    padding-top: 16px;
}

main .template-x.horizontal.mini .template.placeholder svg {
    height: 18px;
    width: 18px;
}

main .template-x.horizontal.mini .template.placeholder .template-link {
    font-size: 12px;
}

main .template-x.horizontal.mini .template img,
main .template-x.horizontal.mini .template video {
    object-fit: cover;
    height: 100px;
}

main .template-x.horizontal.mini .template .icon-free-badge {
    height: 14px;
    font-size: 8px;
    padding: 0 5px;
    right: 4px;
    top: 4px;
}
/* ... */

